tests/infer/type_arith.co
// RUN: choreo -i %s | FileCheck --match-full-lines %s

__co__ void arith1(s32 [32, 18, 6, 1] d, int c) {
   ituple<4> g = {c, 2, 4, 3};
   ituple a = d.span / [3, 4, 5, 6]; // mdspan / mdspan : ituple
   b = d.span % [3, 4, 5, 6];        // mdspan % mdspan : ituple
   h = a + g;                        // ituple + ituple : ituple
   e : 5 + d.span;                   // mdspan + integer : mdspan
   f = a + 1;                        // ituple + integer : ituple
   s16 [e + 2] i;
 }

// CHECK-NOT: error:

// CHECK: Parameter: ::arith1::d, Type: s32 mdspan<4> [32, 18, 6, 1]
// CHECK: Parameter: ::arith1::c, Type: s32
// CHECK: Symbol:    ::arith1::g, Type: ituple<4>
// CHECK: Symbol:    ::arith1::a, Type: ituple<4>
// CHECK: Symbol:    ::arith1::b, Type: ituple<4>
// CHECK: Symbol:    ::arith1::h, Type: ituple<4>
// CHECK: Partial:   ::arith1::e, Type: mdspan<4> [37, 23, 11, 6]
// CHECK: Symbol:    ::arith1::f, Type: ituple<4>
// CHECK: Symbol:    ::arith1::i, Type: global s16 mdspan<4> [39, 25, 13, 8]
// CHECK: Function:  ::arith1, Type: void (*)(s32 mdspan<4> [32, 18, 6, 1], s32)

__co__ void arith2(s32 [32, 18, 6, 1] d, int c) {
  a = cdiv(c, 3);
  b : [cdiv(d.span, {9, 7, 5, 2})];
}
// CHECK: Parameter: ::arith2::d, Type: s32 mdspan<4> [32, 18, 6, 1]
// CHECK: Parameter: ::arith2::c, Type: s32
// CHECK: Symbol:    ::arith2::a, Type: s32
// CHECK: Partial:   ::arith2::b, Type: mdspan<4> [4, 3, 2, 1]
// CHECK: Function:  ::arith2, Type: void (*)(s32 mdspan<4> [32, 18, 6, 1], s32)
